[package]
name = "wasm-audio-nodes"
version = "0.1.0"
authors = ["Patrick Stephansen <pstephansen89@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
